--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,9 @@
 plugins {
 //    id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id 'com.android.library'
     id 'kotlin-kapt'
     id 'kotlin-android-extensions'
+    id 'com.android.library'
 }
 
 android {
@@ -13,10 +13,9 @@ android {
     defaultConfig {
 //        applicationId "com.lovisgod.iswhpay"
         minSdk 21
-        targetSdk 33
+        targetSdk 32
         versionCode 1
         versionName "1.0"
-        multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
 
         ndk {
@@ -46,8 +45,7 @@ android {
         }
     }
 
-    lint {
-        // If set to true (default), stops the build if errors are found.
+    lintOptions {
         abortOnError false
     }
 }
@@ -55,11 +53,14 @@ android {
 dependencies {
 
     implementation fileTree(include: ['*.jar', '*.aar'], dir: 'libs')
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.7.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    testImplementation 'junit:junit:4.13.2'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     api 'com.pixplicity.easyprefs:EasyPrefs:1.10.0'
