--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,35 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-plugins {
-    id 'com.android.application' version '7.3.0' apply false
-    id 'com.android.library' version '7.3.0' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
+buildscript {
+    ext{
+        kotlin_version = '1.4.0'
+//        kotlin_version = '1.3.41'
+        realm_version = '5.7.0'
+
+        retrofit_version = '2.5.0'
+        koin_version = '1.0.1'
+        coroutine_version = '1.3.2'
+    }
+
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath "com.android.tools.build:gradle:7.0.0"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.30"
+//        classpath 'androidx.navigation:navigation-safe-args-gradle-plugin:2.3.5'
+
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
+    }
+}
+
+allprojects {
+    repositories {
+        maven { url "https://jitpack.io" }
+    }
+}
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
